@startuml
title Static Provider and Register Data Structures

class vc_channel_buffer <<iterable section>> {
  channel_id : uint8_t
  raw_voltage : int32_t
  voltage_timestamp : uint32_t
  raw_current : int32_t
  current_timestamp : uint32_t
  lock : k_spinlock
}

class vc_controller <<canonical>> {
  channels[VC_MAX_CHANNELS]
  channel_count : size_t
  system_config
}

class reg_descriptor <<iterable section>> {
  id : reg_id_t
  type : reg_type
  access : reg_access
  category : reg_category
  value : void*
  owner : reg_owner*
}

vc_controller "1" *-- "N" vc_channel_buffer : consumes
reg_descriptor --> vc_controller : bound scalar / owner callback
@enduml
